fdo#81033: writerfilter: RTF import: fix tab stop inheritance from style

For RTF, the tab stops that are set directly on the paragraph are the
tab stops the paragraph has effectively; there is no equivalent of OOXML
<w:tab w:val="clear" w:pos="4536"/> that would override a tab stop of
the applied style; that is done by simply omitting the tab stop.

It would perhaps be possible to implement something to synthesize a
NS_ooxml::LN_Value_ST_TabJc_clear in the RTF tokenizer for this case,
but it's simpler to just generally disable domain mapper's
InitTabStopFromStyle() for RTF.

Change-Id: I7b0581be8db19ffda81c8d1da290abf0a0f69529